# surveyhub

./: .codecov.yml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dev_requirements.txt  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/: actionlint.yaml  pull_request_template.md
.github/workflows/: CI.yaml  actionlint.yaml  actionlint.yml  check-django-migrations.yaml  code-quality.yaml  codecov-validation.yaml  codecov-validation.yml  deploy.yaml  develop-release.yaml  develop-to-main-release.yaml  main-release.yaml  migrations.yaml  pr-template.yaml  pra-backend-tests.yaml  pra-backend.yaml  pra-pre-commit.yml  pull_request_analysis.yaml  pull_request_analysis.yml  python-linting-formatting.yml  python-quality.yml  restrict-non-develop-prs.yaml  tag-deploy.yaml
apps/analytics/: models.py  services.py
apps/core/: api_message.py  cache.py
apps/notifications/:  models.py
apps/surveys/: admin.py  tasks.py
apps/templates/: models.py
backend/: .coveragerc  Dockerfile  docker-compose-backend.yml  pyproject.toml  pytest.ini
backend/scripts/: start-dev.sh
backend/src/: asgi.py  celery_app.py  manage.py  urls.py  wsgi.py
backend/src/accounts/: urls.py
backend/src/accounts/api/v1/: serializers.py  urls.py  viewsets.py
backend/src/analytics/: apps.py  models.py  services.py  urls.py
backend/src/analytics/api/v1/: serializers.py  urls.py  viewsets.py
backend/src/analytics/api/v1/tests/: test_serializers.py  test_viewsets.py
backend/src/analytics/migrations/: 0001_initial.py
backend/src/analytics/tests/: factories.py  test_models.py
backend/src/authentication/: urls.py  views.py
backend/src/authentication/api/v1/: urls.py
backend/src/authentication/api/v1/serializers/: access_token.py
backend/src/authentication/api/v1/viewsets/: access_token.py
backend/src/blueprints/: apps.py  models.py  urls.py
backend/src/blueprints/api/v1/: urls.py
backend/src/blueprints/api/v1/serializers/: blueprint.py  category.py
backend/src/blueprints/api/v1/tests/: test_serializers.py  test_views.py
backend/src/blueprints/api/v1/viewsets/: blueprint.py  category.py
backend/src/blueprints/migrations/: 0001_initial.py
backend/src/blueprints/tests/: factories.py  test_models.py
backend/src/core/: api_message.py  cache.py  factories.py  permissions.py
backend/src/core/templatetags/: form_tags.py
backend/src/core/tests/: test_api_message.py  test_cache.py  test_factories.py  test_http.py  test_pagination.py  test_permissions.py  test_utils.py
backend/src/dashboard/: urls.py
backend/src/frontend/: base.html  dashboard.html
backend/src/frontend/account/: profile.html
backend/src/frontend/analytics/: question.html  survey.html
backend/src/frontend/auth/: base_auth.html  login.html
backend/src/frontend/blueprints/: detail.html  form.html  list.html
backend/src/frontend/notifications/: detail.html  form.html  list.html
backend/src/frontend/questions/: detail.html  form.html  list.html
backend/src/frontend/responses/: detail.html  form.html  list.html
backend/src/frontend/static/css/: app.css
backend/src/frontend/static/js/: app.js  surveys.js
backend/src/frontend/surveys/: detail.html  form.html  list.html
backend/src/notifications/: models.py  services.py  urls.py
backend/src/notifications/api/v1/: urls.py
backend/src/notifications/api/v1/serializers/: notification.py  template.py
backend/src/notifications/api/v1/tests/test_serializers/: test_notification.py  test_template.py
backend/src/notifications/api/v1/tests/test_viewsets/: test_notification.py  test_template.py
backend/src/notifications/api/v1/viewsets/: notification.py  template.py
backend/src/notifications/migrations/: 0001_initial.py
backend/src/notifications/tests/: factories.py  test_models.py
backend/src/settings/: __init__.py  base.py  development.py  production.py  testing.py
backend/src/surveys/: admin.py  apps.py  permissions.py  tasks.py  urls.py
backend/src/surveys/api/v1/: urls.py
backend/src/surveys/api/v1/serializers/: answer.py  question.py  survey.py
backend/src/surveys/api/v1/tests/test_serializers/: test_survey.py
backend/src/surveys/api/v1/tests/test_views/: test_answer.py  test_survey.py
backend/src/surveys/api/v1/viewsets/: answer.py  question.py  response.py  survey.py
backend/src/surveys/migrations/: 0001_initial.py
backend/src/surveys/models/: answer.py  question.py  survey.py
backend/src/surveys/tests/factories/: answer_factory.py  question_factory.py  survey_factory.py
backend/src/surveys/tests/test_models/: test_answer.py  test_question.py  test_survey.py
docs/: DOCKER.md  POETRY.md
frontend/: .gitignore  Dockerfile  README.md  index.html  jsconfig.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.js
nginx/: default.conf  nginx.conf
sample_data/: answers.json  blueprint_categories.json  question_analytics.json  question_blueprints.json  question_options.json  question_templates.json  questions.json  survey_analytics.json  survey_blueprints.json  survey_invitations.json  survey_responses.json  survey_templates.json  surveys.json  template_categories.json  users.json
scripts/: docker_entrypoint.sh  docker_manage.sh  docker_run_server.sh  generate_env.sh  load_sample_data.sh  manage_migrations.sh  pre_requisites.sh  run_tests.sh  start-backend-container.sh  start-dev.sh
src/: asgi.py  celery_app.py  manage.py  urls.py  wsgi.py
src/analytics/: models.py  services.py
src/core/: api_message.py  cache.py  http_.py  pagination.py  permissions.py  utils.py
src/notifications/:  models.py  models.py  serializers.py  services.py  views.py
src/settings/: base.py  development.py  production.py
src/surveys/: admin.py  tasks.py  urls.py
src/templates/: 0002_auto_populate_categories.py  auto_populate_categories_0002.py  models.py  serializers.py  urls.py  views.py
surveyhub/: asgi.py  settings.py  urls.py  wsgi.py
surveyhub/settings/: base.py  production.py
(+144 files in other folders)
