[tool.poetry]
name = "surveyhub"
version = "0.1.0"
description = "SurveyHub Django application"
authors = ["Bharat Kumar <kumar.bhart28@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

asgiref = "^3.6.0"   
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
coreapi = "2.3.3"
coreschema = "0.0.4"
Django = "3.2.7"
djangorestframework = "^3.14.0"
drf-yasg2 = "1.19.4"
drf-yasg = "1.21.7"
idna = "3.3"
inflection = "0.5.1"
itypes = "1.2.0"
Jinja2 = "3.0.2"
MarkupSafe = "2.0.1"
packaging = "^23.0"
pyparsing = "2.4.7"
pytz = "2021.1"
requests = "2.26.0"
six = "1.16.0"
sqlparse = "0.4.2"
uritemplate = "4.1.1"
urllib3 = "1.26.7"
django-filter = "23.3"
Pillow = "10.1.0"
pandas = "2.1.3"
numpy = "^1.26.0"
matplotlib = "3.8.2"
seaborn = "0.13.0"
openpyxl = "3.1.2"
reportlab = "4.0.7"
channels = "4.0.0"
channels-redis = "4.1.0"
django-extensions = "3.2.3"
python-decouple = "3.8"
psycopg2-binary = "2.9.9"
gunicorn = "21.2.0"
whitenoise = "6.6.0"
django-debug-toolbar = "4.2.0"
celery = "^5.5.3"
djangorestframework-simplejwt = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "4.7.0"
factory-boy = "3.3.0"
black = "^24.3"
isort = "^5.13"
pre-commit = "^3.7"
ruff = "^0.4"
coverage = "^7.5"
pytest-cov = "^5.0"
codecov = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
exclude = [
    ".venv",
    "migrations",
    "settings",
]